Replace students with collegues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div id="modalBody" class="modal-body">
-            <p>How likely would you recommend this website to other students or friends?</p>
+            <p>How likely would you recommend this website to your collegues or friends?</p>
 
             <div class="flexbox" id="options">
                 <label for="rate0" class="opt noSelect">0</label>
